--- a/css/header.css
+++ b/css/header.css
@@ -42,7 +42,7 @@
   left: 32%;
   bottom: 20%;
   text-align: right;
-  font-family: avn-ultra;
+  font-family: avn-regular;
   letter-spacing: 1.5px;
   font-size: 20px;
   color: white;
