--- a/css/about.css
+++ b/css/about.css
@@ -82,7 +82,43 @@
 .container {
   background-color: white;
   padding-top: 10%;
+  display: none;
 }
 .carousel-item{
   margin-bottom: 10%;
+}
+
+.team-profile{
+  padding: 5%;
+}
+
+.ourProfiles{
+  display: none;
+  padding: 5%;
+}
+
+.teamBars{
+  cursor: pointer;
+  padding-top: 5%;
+}
+
+.active, .teamBars:hover {
+  font-weight: 800;
+  color: crimson;
+}
+.fade-in {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: 0}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: 0}
+  to {opacity: 1}
 }
