--- a/css/panels-mobile.css
+++ b/css/panels-mobile.css
@@ -1,177 +1,12 @@
-@media only screen and (max-width: 767px) {
-  .header {
-    background: url("../assets/images/dean-bg-mobile.jpg");
-    background-position: right top;
-    background-size: cover;
-  }
+html{
+  height: 100%;
+  width: 100%;
+  /*overflow-x: hidden;
+  overflow-y: hidden;*/
+  background-color: white;
+}
 
-  .left-square {
-    position: absolute;
-    top: 20%;
-    bottom: 30%;
-    width: 60%;
-    left: -30%;
-    border: 25px solid crimson;
-  }
-
-  .page-caption {
-    font-size: 50px;
-    font-family: avn-demi;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    line-height: 65px;
-    color: white;
-    position: absolute;
-    top: 35%;
-    left: 10%;
-  }
-
-  .sub-title {
-    position: absolute;
-    left: 32%;
-    bottom: 20%;
-    text-align: right;
-    font-family: avn-ultra;
-    letter-spacing: 1.5px;
-    font-size: 20px;
-    color: white;
-  }
-
-  .vertical-sub-title {
-    color: crimson;
-    font-family: avn-demi;
-    position: absolute;
-    text-align:right;
-    font-size: 15px;
-    white-space: nowrap;
-    letter-spacing: 1px;
-    right: 50px;
-    top: 15%;
-    transform: rotate(270deg);
-    transform-origin:bottom right;
-  }
-
-  .bottom-square {
-    width: 100%;
-    height: 60px;
-    font-size: 30px;
-    text-align: center;
-    line-height: 60px;
-    background: crimson;
-    position: absolute;
-    right: 0px;
-    bottom: 0px;
-  }
-
-  .action-area {
-    line-height: 60px;
-    font-size: 30px;
-    text-align: center;
-  }
-
-  #section-1 {
-    background-color: crimson;
-  }
-
-  .section-1-left {
-    background-color: white;
-    height: 50%;
-  }
-
-  .section-1-right {
-    background-color: crimson;
-    height: 50%;
-  }
-
-  /*
-  =============
-  Section 1 CSS
-  =============
-  */
-
-  .caller-h2 {
-    font-size: 25px;
-    letter-spacing: 1px;
-    font-family: avn-demi;
-  }
-
-  .caller-h5 {
-    font-size: 15px;
-    font-family: avn-regular;
-  }
-
-  .background-white {
-    background: white;
-  }
-
-  .background-crimson {
-    background: crimson;
-  }
-
-  .section-1-left-middle-content {
-    color: crimson;
-    font-family: avn-regular;
-    width: 100%;
-    position: absolute;
-    text-align: center;
-    top: 10%;
-    left: 0%;
-    transform: translate(0%, 0%);
-  }
-
-  .section-1-left-bottom-content {
-    font-family: avn-demi;
-    font-size: 12px;
-    width: 100%;
-    position: absolute;
-    text-align: center;
-    bottom: 35%;
-    left: 20%;
-  }
-
-  #quoter {
-    font-size: 16px;
-    color: black;
-    font-family: avn-bold;
-    top:50%;
-  }
-
-  .section-1-right-middle-content {
-    color: white;
-    width: 100%;
-    position: absolute;
-    text-align: center;
-    letter-spacing: 1px;
-    font-size: 21px;
-    font-family: avn-regular;
-    top: 10%;
-    left: 0%;
-    transform: translate(0%, 0%);
-  }
-
-  .section-1-city-img {
-    position: absolute;
-    width: 94%;
-    bottom: 0px;
-    max-height: 50%;
-  }
-
-  #section-temp {
-    background-color: #333;
-    width: 97%;
-    min-height: 96%;
-    height: auto;
-    margin: 2%;
-    margin-right: 1%;
-  }
-
-  .desc {
-    margin-top: 2%;
-    margin-bottom: 2%
-  }
-
-  .qr-code-img {
-    margin-top: 10px;
-    width: 100px;
-  }
+.main-section{
+  margin: 50px auto 0;
+  max-width: 100%;
 }
