--- a/css/panels.css
+++ b/css/panels.css
@@ -1,22 +1,106 @@
-/*
-================
-TEMP Section CSS
-================
-*/
-
-#section-temp {
-  background-color: #333;
-  width: 97%;
-  height: 96%;
-  margin: 2%;
-  margin-right: 1%;
+html{
+  height: 100%;
+  width: 100%;
+  /*overflow-x: hidden;
+  overflow-y: hidden;*/
+  background-color: white;
 }
 
-.desc {
-  margin-top: 8%;
+body{
+  height: 100%;
+  width: 100%;
+  /*overflow: hidden;*/
 }
 
-.qr-code-img {
-  margin-top:20px;
-  width: 150px;
+.main-section{
+  margin: 50px auto 0;
+  max-width: 80%;
+  overflow-x: hidden;
+}
+
+.subtitle {
+  margin: 30px 0 40px 0;
+  font-size: 300%;
+  color: crimson;
+}
+
+.fancy {
+  line-height: 0.5;
+  text-align: center;
+}
+
+.fancy span {
+  display: inline-block;
+  position: relative;
+}
+
+.fancy span:before,
+.fancy span:after {
+  content: "";
+  position: absolute;
+  height: 5px;
+  border-bottom: 1px solid crimson;
+  border-top: 1px solid crimson;
+  top: 7px;
+  width: 200px;
+}
+
+.fancy span:before {
+  right: 100%;
+  margin-right: 15px;
+}
+
+.fancy span:after {
+  left: 100%;
+  margin-left: 15px;
+}
+
+.image_container2{
+  width: 100%;
+  padding-top: 100%;
+  background-image: url("../assets/images/10.jpg");
+  filter: contrast(70%) brightness(120%);
+  background-position: 20% 20%;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+.ShiyiPan{
+  background-image: url("../assets/images/ShiyiPan.png");
+  background-position: 20% 0%;
+}
+
+.caption{
+  margin-bottom: 3%;
+  font-size: 100%;
+  height: 20%;
+}
+
+.caption .name {
+  color: white;
+  letter-spacing: 1px;
+  font-family: avn-demi;
+  line-height:30px;
+}
+
+.name{
+  color: red;
+  font-size: 120%;
+}
+
+.title{
+  font-size: 100%;
+}
+
+.speakers-header{
+  font-size: 150%;
+  margin-bottom: 10px;
+}
+
+.time-location{
+  font-weight: bold;
+}
+
+.bottom-margin{
+  margin-bottom: 50px;
 }
