--- a/css/panels-mobile.css
+++ b/css/panels-mobile.css
@@ -1,12 +1,21 @@
-html{
-  height: 100%;
-  width: 100%;
-  /*overflow-x: hidden;
-  overflow-y: hidden;*/
-  background-color: white;
-}
 
-.main-section{
-  margin: 50px auto 0;
-  max-width: 100%;
+@media only screen and (max-width: 767px) {
+  html{
+    height: 100%;
+    width: 100%;
+    /*overflow-x: hidden;
+    overflow-y: hidden;*/
+    background-color: white;
+  }
+
+  .header {
+    background: url("../assets/images/mobile-bg-panels.JPG");
+    background-position: right top;
+    background-size: cover;
+  }
+
+  .main-section{
+    margin: 50px auto 0;
+    max-width: 100%;
+  }
 }
