--- a/css/panels.css
+++ b/css/panels.css
@@ -12,6 +12,12 @@ body{
   /*overflow: hidden;*/
 }
 
+.header {
+  background: url("../assets/images/panels-bg.jpg");
+  background-position: right top;
+  background-size: cover;
+}
+
 .main-section{
   margin: 50px auto 0;
   max-width: 80%;
@@ -98,9 +104,44 @@ body{
 }
 
 .time-location{
-  font-weight: bold;
+  font-family: avn-demi;
+  margin: 5px;
+
 }
 
 .bottom-margin{
   margin-bottom: 50px;
+}
+
+.panel-row {
+  margin: 7% 0px;
+}
+
+.panel-nav {
+  margin: 4% 0px;
+}
+
+#first-panel {
+  margin-top: 2%;
+}
+
+#sixth-panel {
+  margin-bottom: 15%;
+}
+
+.panel-nav a {
+  color: crimson;
+  font-size: 20px;
+  line-height: 35px;
+  letter-spacing: 1px;
+}
+
+.panel-desc {
+  font-family: avn-regular;
+  text-align: justify;
+}
+
+.speakers-header {
+  font-family: avn-demi;
+  letter-spacing: 1px;
 }
