--- a/css/panels-mobile.css
+++ b/css/panels-mobile.css
@@ -18,4 +18,48 @@
     margin: 50px auto 0;
     max-width: 100%;
   }
+
+  .panel-desc p {
+    font-size: 14px;
+  }
+
+  .speakers-header {
+    margin-top: 20px;
+  }
+
+  .speaker-img {
+    border: 5px solid #EFE9E1;
+    box-shadow: -10px 20px crimson;
+    margin-top: 0px;
+    width: 100%;
+    max-width: 240px;
+    height: auto;
+  }
+
+  .speaker-name {
+    width: 100%;
+    max-width: 240px;
+    text-align: left;
+    color: white;
+    font-family: avn-demi;
+    font-size: 15px;
+    line-height: 20px;
+    margin: auto;
+    letter-spacing: 1px;
+  }
+
+  .speaker-title {
+    width: 100%;
+    max-width: 240px;
+    text-align: left;
+    line-height: 15px;
+    font-size: 12px;
+    margin: auto;
+    letter-spacing: 1px;
+    margin-bottom: 20px;
+  }
+
+  .speaker-item {
+    padding: 0px 8px;
+  }
 }
