--- a/css/agenda.css
+++ b/css/agenda.css
@@ -18,7 +18,7 @@
 }
 
 .header {
-  background: url("../assets/images/agenda-bg.jpg");
+  background: url("../assets/images/agenda-bg.JPG");
   background-position: right top;
   background-size: cover;
 }
