--- a/css/home.css
+++ b/css/home.css
@@ -279,13 +279,13 @@ Section 3 CSS
   width: 100%;
   height: 100%;
   z-index: -1;
-  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-  filter: grayscale(100%);
+  -webkit-filter: blur(0px); /* Safari 6.0 - 9.0 */
+  filter: blur(0px);
 }
 
 .panel-banner img:hover {
-  -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
-  filter: grayscale(0%);
+  -webkit-filter: blur(20px); /* Safari 6.0 - 9.0 */
+  filter: blur(20px);
 }
 
 
@@ -294,7 +294,7 @@ Section 3 CSS
   font-family: avn-demi;
   font-size: 45px;
   letter-spacing: 5px;
-  color: white;
+  color: black;
   top: -40px;
   right: 20px;
   transform: rotate(270deg);
