--- a/css/panels.css
+++ b/css/panels.css
@@ -65,7 +65,6 @@ body{
   width: 100%;
   padding-top: 100%;
   background-image: url("../assets/images/10.jpg");
-  filter: contrast(70%) brightness(120%);
   background-position: 20% 20%;
   background-size: 100%;
   background-repeat: no-repeat;
@@ -143,5 +142,37 @@ body{
 
 .speakers-header {
   font-family: avn-demi;
+  letter-spacing: 1px;
+}
+
+.speaker-img {
+  border: 10px solid #EFE9E1;
+  box-shadow: -10px 30px crimson;
+  margin-top: 0px;
+  width: 100%;
+  max-width: 180px;
+  height: auto;
+}
+
+.speaker-name {
+  width: 100%;
+  max-width: 180px;
+  text-align: left;
+  color: white;
+  font-family: avn-demi;
+  font-size: 20px;
+  line-height: 30px;
+  margin: auto;
+  letter-spacing: 1px;
+}
+
+.speaker-title {
+  width: 100%;
+  max-width: 180px;
+  text-align: left;
+  line-height: 25px;
+  font-size: 15px;
+  margin: auto;
+  margin-bottom: 10px;
   letter-spacing: 1px;
 }
