--- a/css/past.css
+++ b/css/past.css
@@ -22,10 +22,25 @@
 #redbox{
   background-color: crimson;
   padding: 10%;
+  color: white;
+  font-family: avn-regular;
+  line-height: 30px;
+  height: 100%;
+}
+
+#redbox .speaker-name{
+  font-family: avn-demi;
 }
 #blackbox{
   background-color: rgba(0, 0, 0, 0.8);
   padding: 10%;
+  color: white;
+  font-family: avn-regular;
+  line-height: 30px;
+}
+
+#blackbox .speaker-name{
+  font-family: avn-demi;
 }
 
 .header {
@@ -113,4 +128,13 @@
 }
 .carousel-item{
   margin-bottom: 10%;
+}
+
+.summit-year {
+  width: 350px;
+  margin: auto;
+  font-family: avn-ultra;
+  font-size: 50px;
+  letter-spacing: 3px;
+  margin-bottom: 30px;
 }
