--- a/css/about-mobile.css
+++ b/css/about-mobile.css
@@ -54,6 +54,30 @@
   max-width: 10%;
 }
 
+.summary {
+  padding: 0px;
+  font-size: 14px;
+  margin-top: 15px;
+}
+
+.ourProfiles{
+  display: none;
+  padding: 0%;
+  margin-top: 20px;
+}
+
+.ourProfiles h4{
+  font-size: 16px;
+  margin-top: 3px;
+  margin-bottom: 2px;
+}
+
+.ourProfiles h5{
+  font-size: 14px;
+  margin-top: 0px;
+  margin-bottom: 5px;
+}
+
 .strip{
   padding-bottom: 15px;
 }
@@ -85,7 +109,7 @@
   padding-left: 10%;
   padding-right: 10%;
 }
-.container {
+.white-container {
   background-color: white;
   padding-top: 10%;
 }
