--- a/css/about.css
+++ b/css/about.css
@@ -35,7 +35,7 @@
   height: 100%;
 }
 .header {
-  background: url("../assets/images/about-bg.jpg");
+  background: url("../assets/images/bg-about.jpg");
   background-position: right top;
   background-size: cover;
 }
