--- a/css/home.css
+++ b/css/home.css
@@ -279,22 +279,23 @@ Section 3 CSS
   width: 100%;
   height: 100%;
   z-index: -1;
-  -webkit-filter: blur(0px); /* Safari 6.0 - 9.0 */
-  filter: blur(0px);
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
 }
 
 .panel-banner img:hover {
-  -webkit-filter: blur(20px); /* Safari 6.0 - 9.0 */
-  filter: blur(20px);
+  -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(0%);
 }
 
 
 .panel-name {
   position: absolute;
   font-family: avn-demi;
-  font-size: 45px;
+  font-size: 55px;
+  text-shadow: 2px 2px crimson;
   letter-spacing: 5px;
-  color: black;
+  color: white;
   top: -40px;
   right: 20px;
   transform: rotate(270deg);
@@ -514,7 +515,7 @@ Section 4 CSS
 .desc {
   margin: 1em 0.75em 0 0;
 
-  font-size: 0.77777em;
+  font-size: 0.9em;
   font-style: italic;
   line-height: 1.5em;
 }
