--- a/css/agenda.css
+++ b/css/agenda.css
@@ -18,7 +18,7 @@
 }
 
 .header {
-  background: url("../assets/images/bg-agenda.JPG");
+  background: url("../assets/images/bg-agenda.jpg");
   background-position: right top;
   background-size: cover;
 }
