--- a/css/panels-mobile.css
+++ b/css/panels-mobile.css
@@ -9,7 +9,7 @@
   }
 
   .header {
-    background: url("../assets/images/mobile-bg-panels.JPG");
+    background: url("../assets/images/mobile-bg-panels.jpg");
     background-position: right top;
     background-size: cover;
   }
