--- a/css/past-mobile.css
+++ b/css/past-mobile.css
@@ -30,7 +30,7 @@
     padding: 10%;
   }
   .header {
-    background: url("../assets/images/mobile-bg-past.JPG");
+    background: url("../assets/images/mobile-bg-past.jpg");
     background-position: right top;
     background-size: cover;
   }
