--- a/css/past.css
+++ b/css/past.css
@@ -44,7 +44,7 @@
 }
 
 .header {
-  background: url("../assets/images/bg-past.JPG");
+  background: url("../assets/images/bg-past.jpg");
   background-position: right top;
   background-size: cover;
 }
