--- a/css/past.css
+++ b/css/past.css
@@ -36,6 +36,7 @@
   color: white;
   font-family: avn-regular;
   line-height: 30px;
+  height: 100%;
 }
 
 #blackbox .speaker-name{
@@ -43,7 +44,7 @@
 }
 
 .header {
-  background: url("../assets/images/bg-past.JPG");
+  background: url("../assets/images/bg-past.jpg");
   background-position: right top;
   background-size: cover;
 }
