--- a/css/panels-mobile.css
+++ b/css/panels-mobile.css
@@ -41,7 +41,7 @@
     max-width: 240px;
     text-align: left;
     color: white;
-    font-family: avn-demi;
+    font-family: avn-demi, pf-heavy, pf-medium;
     font-size: 15px;
     line-height: 20px;
     margin: auto;
