--- a/css/past-mobile.css
+++ b/css/past-mobile.css
@@ -98,7 +98,7 @@
   .summit-year {
     width: 350px;
     margin: auto;
-    font-family: avn-ultra;
+    font-family: avn-ultra, pf-light;
     font-size: 40px;
     letter-spacing: 3px;
     margin-bottom: 15px;
