--- a/css/global.css
+++ b/css/global.css
@@ -72,6 +72,48 @@
   url("../assets/fonts/AvenirNext-UltraLightItalic.ttf") format("truetype");
 }
 
+@font-face {
+  font-family: "pf-ultra";
+  src: url("../assets/fonts/fonts/PingFang-ExtraLight.ttf");
+  src:
+  url("../assets/fonts/PingFang-ExtraLight.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "pf-light";
+  src: url("../assets/fonts/fonts/PingFang-Light.ttf");
+  src:
+  url("../assets/fonts/PingFang-Light.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "pf-regular";
+  src: url("../assets/fonts/fonts/PingFang-Regular.ttf");
+  src:
+  url("../assets/fonts/PingFang-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "pf-medium";
+  src: url("../assets/fonts/fonts/PingFang-Medium.ttf");
+  src:
+  url("../assets/fonts/PingFang-Medium.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "pf-heavy";
+  src: url("../assets/fonts/fonts/PingFang-Heavy.ttf");
+  src:
+  url("../assets/fonts/PingFang-Heavy.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "pf-bold";
+  src: url("../assets/fonts/fonts/PingFang-Bold.ttf");
+  src:
+  url("../assets/fonts/PingFang-Bold.ttf") format("truetype");
+}
+
 
 /*
   1. HTML Element Styling
@@ -79,7 +121,7 @@
 html, body{
   height: 100%;
   width: 100%;
-  font-family: avn-medium;
+  font-family: avn-medium, pf-medium;
   background-color: crimson;
 }
 
@@ -186,7 +228,7 @@ a:hover {
 }
 
 .center-caption {
-  font-family: avn-ultra;
+  font-family: avn-ultra, pf-light;
   margin-bottom: 2%;
   letter-spacing: 2px;
   color: white;
@@ -205,7 +247,7 @@ a:hover {
   border-radius: 5px;
   line-height: 150px;
   font-size: 20px;
-  font-family: avn-regular;
+  font-family: avn-regular, pf-regular;
 }
 
 .email-input {
@@ -345,11 +387,11 @@ a:hover {
 }
 
 .ultra-txt {
-  font-family: avn-ultra;
+  font-family: avn-ultra, pf-light;
 }
 
 .highlighted {
-  font-family: avn-medium;
+  font-family: avn-medium, pf-medium;
   color: crimson;
 }
 
