--- a/css/header-mobile.css
+++ b/css/header-mobile.css
@@ -16,7 +16,7 @@
 
   .site-caption {
     font-size: 40px;
-    font-family: avn-demi;
+    font-family: avn-demi, pf-heavy, pf-medium;
     letter-spacing: 1px;
     text-transform: uppercase;
     line-height: 55px;
@@ -28,7 +28,7 @@
 
   .page-caption {
     font-size: 50px;
-    font-family: avn-demi;
+    font-family: avn-demi, pf-heavy, pf-medium;
     letter-spacing: 1px;
     text-transform: uppercase;
     line-height: 65px;
@@ -44,7 +44,7 @@
     right: 12%;
     bottom: 20%;
     text-align: right;
-    font-family: avn-ultra;
+    font-family: avn-ultra, pf-light;
     letter-spacing: 1.5px;
     font-size: 20px;
     color: white;
@@ -52,7 +52,7 @@
 
   .vertical-sub-title {
     color: crimson;
-    font-family: avn-demi;
+    font-family: avn-demi, pf-heavy, pf-medium;
     position: absolute;
     text-align:right;
     font-size: 15px;
