--- a/css/home.css
+++ b/css/home.css
@@ -18,12 +18,12 @@ Section 1 CSS
 
 .caller-h2 {
   font-size: 50px;
-  font-family: avn-demi;
+  font-family: avn-demi, pf-heavy, pf-medium;
 }
 
 .caller-h5 {
   font-size: 20px;
-  font-family: avn-regular;
+  font-family: avn-regular, pf-regular;
 }
 
 .background-white {
@@ -47,7 +47,7 @@ Section 1 CSS
 
 
 .section-1-left-bottom-content {
-  font-family: avn-demi;
+  font-family: avn-demi, pf-heavy, pf-medium;
   width: 70%;
   position: absolute;
   text-align: center;
@@ -119,7 +119,7 @@ Section MAP
   top: 100px;
   line-height: 100px;
   font-size: 40px;
-  font-family: avn-demi;
+  font-family: avn-demi, pf-heavy, pf-medium;
   letter-spacing: 2px;
   width: 100%;
 }
@@ -137,7 +137,7 @@ Section Sponsors
 .sponsor-caption {
   padding-top: 30px;
   font-size: 30px;
-  font-family: avn-demi;
+  font-family: avn-demi, pf-heavy, pf-medium;
   letter-spacing: 3px;
   color: white;
 }
@@ -167,14 +167,14 @@ Section Title
 }
 
 .speakers-section-caption {
-  font-family: avn-demi;
+  font-family: avn-demi, pf-heavy, pf-medium;
   font-size: 40px;
   color: black;
   letter-spacing: 5px;
 }
 
 .speakers-section-subcaption {
-  font-family: avn-regular;
+  font-family: avn-regular, pf-regular;
   font-size: 22px;
   color: black;
   letter-spacing: 3px;
@@ -185,14 +185,14 @@ Section Title
 }
 
 .panels-section-caption {
-  font-family: avn-demi;
+  font-family: avn-demi, pf-heavy, pf-medium;
   font-size: 40px;
   color: white;
   letter-spacing: 5px;
 }
 
 .panels-section-subcaption {
-  font-family: avn-regular;
+  font-family: avn-regular, pf-regular;
   font-size: 22px;
   color: white;
   letter-spacing: 3px;
@@ -242,7 +242,7 @@ Section 2 CSS
   max-width: 240px;
   text-align: left;
   color: white;
-  font-family: avn-demi;
+  font-family: avn-demi, pf-heavy, pf-medium;
   font-size: 20px;
   line-height: 30px;
   margin: auto;
@@ -291,7 +291,7 @@ Section 3 CSS
 
 .panel-name {
   position: absolute;
-  font-family: avn-demi;
+  font-family: avn-demi, pf-heavy, pf-medium;
   font-size: 55px;
   text-shadow: 2px 2px crimson;
   letter-spacing: 5px;
@@ -308,7 +308,7 @@ Section 3 CSS
 
 .panel-desc p {
   font-size: 20px;
-  font-family: avn-regular;
+  font-family: avn-regular, pf-regular;
   text-align: justify;
   line-height: 35px;
 }
@@ -330,14 +330,14 @@ Section 3 CSS
 }
 
 .panel-section-caption {
-  font-family: avn-demi;
+  font-family: avn-demi, pf-heavy, pf-medium;
   font-size: 40px;
   color: white;
   letter-spacing: 5px;
 }
 
 .panel-section-subcaption {
-  font-family: avn-regular;
+  font-family: avn-regular, pf-regular;
   font-size: 25px;
   color: white;
   letter-spacing: 3px;
@@ -650,7 +650,7 @@ SECTION Contact
 }
 
 .contact-caption {
-  font-family: avn-ultra;
+  font-family: avn-ultra, pf-light;
   letter-spacing:2px;
 }
 
@@ -682,7 +682,7 @@ Section-Actions
   width: 300px;
   margin: auto;
   color: black;
-  font-family: avn-demi;
+  font-family: avn-demi, pf-heavy, pf-medium;
   letter-spacing: 1px;
 }
 
