--- a/css/speakers-mobile.css
+++ b/css/speakers-mobile.css
@@ -21,158 +21,48 @@
     font-size: 50%;
   }
 
-  .container{
-    max-width: none;
-    margin-left: 8%;
-    width: 84%;
-    margin-right: 8%;
-    padding-top: 3%;
+  .panel-nav {
+    margin-top: 30px;
+
   }
 
-  .grand-title{
-    color: red;
-    font-size: 400%;
-    padding-bottom: 3%;
+  .panels-header{
+    font-size: 25px;
   }
 
-  .caption{
-    margin-bottom: 3%;
-    font-size: 100%;
-    height: 20%;
+  .modal-content{
+    font-size: 12px;
   }
 
-  .panel{
-    font-size: 200%;
-    padding-bottom: 3%;
+  .speaker-img {
+    border: 5px solid #EFE9E1;
+    box-shadow: -10px 20px crimson;
+    margin-top: 0px;
+    width: 100%;
+    max-width: 240px;
+    height: auto;
   }
 
-  .name{
-    color: red;
-    font-size: 120%;
-  }
-
-  .panel-name{
+  .speaker-name {
+    width: 100%;
+    max-width: 240px;
+    text-align: left;
     color: white;
-    font-size: 120%;
+    font-family: avn-demi, pf-heavy, pf-medium;
+    font-size: 15px;
+    line-height: 20px;
+    margin: auto;
+    letter-spacing: 1px;
   }
 
-  .panel-title{
-    color: grey;
-    font-size: 100%;
-  }
-
-  .first-line{
-    text-align: center;
-    color: grey;
-    font-size: 180%
-  }
-
-  .second-line{
-    text-align: center;
-    color: red;
-    font-size: 200%
-  }
-
-  .spacer{
-    padding-top: 3%;
-  }
-
-  .black{
-    width:100%;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 3%;
-    padding-bottom: 10%;
-    background-color: black;
-    color: white;
-  }
-
-  .image_container1{
+  .speaker-title {
     width: 100%;
-    padding-top: 111%;
-    background-image: url("../assets/images/10.jpg");
-    background-color: rgba(100, 0, 0, 0.2);
-    background-blend-mode: multiply;
-    filter: brightness(120%);
-    background-position: 20% 20%;
-    background-size: 100%;
-    background-repeat: no-repeat;
-  }
-
-  .image_container2{
-    width: 100%;
-    padding-top: 100%;
-    background-image: url("../assets/images/10.jpg");
-    filter: contrast(70%) brightness(120%);
-    background-position: 20% 20%;
-    background-size: 100%;
-    background-repeat: no-repeat;
-  }
-
-  .image_container3{
-    width: 100%;
-    padding-top: 100%;
-    background-image: url("../assets/images/10.jpg");
-    background-color: rgba(100, 0, 0, 0.2);
-    background-blend-mode: multiply;
-    filter: brightness(120%);
-    background-position: 20% 20%;
-    background-size: 100%;
-    background-repeat: no-repeat;
-  }
-
-  .image_container4{
-    width: 100%;
-    padding-top: 50%;
-    background-image: url("../../../assets/images/panels/1.jpg");
-    background-position: 0% 5%;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    filter: contrast(80%);
-  }
-
-  .TiankaiCui{
-    background-image: url("../assets/images/TiankaiCui.jpg");
-  }
-
-  .QiyueZhang{
-    background-image: url("../assets/images/QiyueZhang.png");
-  }
-
-  .JizhongZhang{
-    background-image: url("../assets/images/JizhongZhang.png");
-    background-position: 20% 0%;
-  }
-
-  .ShiyiPan{
-    background-image: url("../assets/images/ShiyiPan.png");
-    background-position: 20% 0%;
-  }
-
-  .XinZhou{
-    background-image: url("../assets/images/XinZhou.png");
-    background-position: 20% 0%;
-  }
-
-  .NingLi{
-    background-image: url("../assets/images/NingLi.png");
-    background-position: 20% 0%;
-  }
-  .YimingZhang{
-    background-image: url("../assets/images/YimingZhang.png");
-    background-position: 20% 0%;
-  }
-  .TadSmith{
-    background-image: url("../assets/images/TadSmith.jpg");
-    background-size: 95%;
-    background-position: 20% 5%;
-  }
-  .JiwuWang{
-    background-image: url("../assets/images/JiwuWang.png");
-    background-position: 20% 0%;
-  }
-  .KaijingYan{
-    background-image: url("../assets/images/KaijingYan.png");
-    background-position: 20% 0%;
+    max-width: 240px;
+    text-align: left;
+    line-height: 15px;
+    font-size: 12px;
+    margin: auto;
+    letter-spacing: 1px;
+    margin-bottom: 20px;
   }
 }
