--- a/css/speakers.css
+++ b/css/speakers.css
@@ -75,7 +75,7 @@ body{
   box-shadow: -10px 30px crimson;
   margin-top: 0px;
   width: 100%;
-  max-width: 180px;
+  max-width: 190px;
   height: auto;
 }
 
@@ -104,6 +104,10 @@ body{
 
 .buttonImg{
   cursor: pointer;
+}
+
+.long-header{
+  font-size: 180%;
 }
 
 #last-row {
